# pm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  boards.py  config.py  db.py  main.py  models.py  security.py  seed.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_boards.py  test_chat.py  test_db.py  test_health.py  test_root.py  test_security.py
docs/: DATABASE.md  PLAN.md  TASKS.md
frontend/: .gitignore  AGENTS.md  next.config.ts  package.json  playwright.config.ts
frontend/src/components/: AuthGate.tsx  AuthPanel.test.tsx  AuthPanel.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.test.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.ts  useBoard.test.ts  useBoard.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  enhancements.spec.ts  helpers.ts  kanban.spec.ts  persistence.spec.ts
scripts/: AGENTS.md  build-frontend.ps1  build-frontend.sh  start.ps1  start.sh  stop.ps1  stop.sh
